--- a/psytrack/examples/ExampleNotebook.ipynb
+++ b/psytrack/examples/ExampleNotebook.ipynb
@@ -380,6 +380,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.,  0.],\n",
+       "       [ 1., -1.],\n",
+       "       [ 1.,  1.],\n",
+       "       ...,\n",
+       "       [-1., -1.],\n",
+       "       [ 1., -1.],\n",
+       "       [-1.,  1.]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D['inputs']['h']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
